<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner

        android:id="@+id/spinner"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck">

    </Spinner>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="#FF5722"
        android:text="@string/titleApp"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="223dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"

        android:background="#FF5722"
        android:text="@string/complementos"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="307dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <CheckBox
            android:id="@+id/papas"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:text="@string/papas"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/hotdogs"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:text="@string/hotdog"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/tomate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:text="@string/tomate"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="241dp"
        android:layout_height="41dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <CheckBox
            android:id="@+id/queso"
            android:layout_width="107dp"
            android:layout_height="34dp"

            android:layout_marginRight="10dp"
            android:text="@string/queso"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/huevo"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginRight="10dp"
            android:text="@string/huevo"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"

        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <CheckBox
            android:id="@+id/mayonesa"
            android:layout_width="107dp"
            android:layout_height="34dp"

            android:layout_marginRight="10dp"
            android:text="@string/mayonesa"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/mostaza"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginRight="10dp"
            android:text="@string/mostaza"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/ketchup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_marginRight="10dp"
            android:text="@string/ketchup"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView

        android:id="@+id/textView4"
        android:layout_width="234dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="#FF5722"
        android:text="@string/salsa"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:onClick="comprar"
        android:text="@string/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/muestrDatos"
        android:layout_width="364dp"
        android:layout_height="126dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>